--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,11 +5,16 @@
 #spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 #spring.h2.console.enabled=true
 
-spring.datasource.url=jdbc:mariadb://localhost:3306/human_resource
-spring.datasource.driverClassName=org.mariadb.jdbc.Driver
+#spring.datasource.url=jdbc:mariadb://localhost:3306/human_resource
+#spring.datasource.driverClassName=org.mariadb.jdbc.Driver
+#spring.jpa.database-platform=org.hibernate.dialect.MariaDB103Dialect
+
+spring.datasource.url=jdbc:mysql://localhost:3306/human_resource
+spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+
 spring.datasource.username=root
 spring.datasource.password=sudnxp5698884
-spring.jpa.database-platform=org.hibernate.dialect.MariaDB103Dialect
 spring.jpa.hibernate.ddl-auto=update
 
 spring.jpa.show-sql=true
