--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,11 +9,17 @@
 #spring.datasource.driverClassName=org.mariadb.jdbc.Driver
 #spring.jpa.database-platform=org.hibernate.dialect.MariaDB103Dialect
 
-spring.datasource.url=jdbc:mysql://localhost:3306/human_resource
-spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
-spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+#spring.datasource.url=jdbc:mysql://localhost:3309/human_resource
+#spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
+#spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+#spring.datasource.username=root
 
-spring.datasource.username=root
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/human_resource
+spring.datasource.driverClassName=org.postgresql.Driver
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.datasource.username=postgres
+
 spring.datasource.password=sudnxp5698884
 spring.jpa.hibernate.ddl-auto=update
 
